--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,178 +1,179 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
-    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.sv11130072.mto.Login"
-    android:background="@android:color/transparent">
+    tools:context="com.example.sv11130072.mto.Login">
 
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:background="@android:color/transparent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/linearLayout"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true">
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/textViewLogin"
+                style="@android:style/TextAppearance.Holo.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/textViewLogin"
-                android:textColor="#ffba15ff"
-                android:text="@string/mto"
-                android:textSize="50dp"
-                android:textIsSelectable="false"
-                style="@android:style/TextAppearance.Holo.Large"
                 android:editable="false"
+                android:text="@string/mto"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ffba15ff"
+                android:textIsSelectable="false"
+                android:textSize="50dp"
                 android:textStyle="bold|italic" />
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="51dp"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="o"
-                android:id="@+id/textView"
                 android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/linearLayout"
                 android:layout_toEndOf="@+id/linearLayout"
+                android:layout_toRightOf="@+id/linearLayout"
+                android:text="o"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ffff30a3"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="n"
-                android:id="@+id/textView2"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ffff2134"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="l"
-                android:id="@+id/textView3"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ffffb335"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="i"
-                android:id="@+id/textView4"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#fffdff13"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="n"
-                android:id="@+id/textView5"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ff9fff23"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="e"
-                android:id="@+id/textView6"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ff23ff19"
                 android:textSize="30dp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_margin="25dp"
             android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal">
+            android:layout_margin="25dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/editAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:inputType="textEmailAddress"
+                android:background="@drawable/edit_text_style"
                 android:ems="10"
-                android:id="@+id/editAccount"
-                android:background="@drawable/EditTextStyle"
                 android:gravity="center"
+                android:inputType="textEmailAddress"
                 android:text="Tên đăng nhập"
                 android:textColor="#ffa813ff" />
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
             android:layout_margin="25dp"
-            android:layout_gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/editText"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:inputType="textVisiblePassword|text"
+                android:background="@drawable/edit_text_style"
                 android:ems="10"
-                android:id="@+id/editText"
-                android:background="@drawable/EditTextStyle"
-                android:text="Mật khẩu"
-                android:textColor="#ffa813ff"
+                android:gravity="center"
+                android:inputType="textVisiblePassword|text"
                 android:password="false"
-                android:gravity="center" />
+                android:text="Mật khẩu"
+                android:textColor="#ffa813ff" />
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/btnSubmit"
                 android:id="@+id/button"
-                android:background="@drawable/custom_btn_violet"
                 style="@style/btnStyleViolet"
-                android:layout_margin="5dp" />
-
-            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/btnRes"
+                android:layout_margin="5dp"
+                android:background="@drawable/custom_btn_violet"
+                android:text="@string/btnSubmit" />
+
+            <Button
                 android:id="@+id/button2"
-                android:background="@drawable/custom_btn_violet"
                 style="@style/btnStyleViolet"
-                android:layout_margin="5dp" />
-
-            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/btnExit"
-                android:id="@+id/button3"
+                android:layout_margin="5dp"
                 android:background="@drawable/custom_btn_violet"
+                android:text="@string/btnRes" />
+
+            <Button
+                android:id="@+id/button3"
                 style="@style/btnStyleViolet"
-                android:layout_margin="5dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@drawable/custom_btn_violet"
+                android:text="@string/btnExit" />
         </LinearLayout>
 
     </LinearLayout>
