--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,153 +1,154 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
-    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.sv11130072.mto.Register">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:gravity="center_horizontal"
-        android:layout_margin="10dp">
+        android:orientation="vertical">
         <LinearLayout
-            android:orientation="horizontal"
+            android:id="@+id/linearLayout2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/linearLayout2"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true">
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/textView7"
+                style="@style/Base.TextAppearance.AppCompat.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/textView7"
-                android:textColor="#ffba15ff"
                 android:text="@string/mto"
-                android:textSize="50dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ffba15ff"
                 android:textIsSelectable="false"
-                android:textStyle="bold|italic"
-                style="@style/Base.TextAppearance.AppCompat.Title" />
+                android:textSize="50dp"
+                android:textStyle="bold|italic" />
 
             <TextView
+                android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="51dp"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="o"
-                android:id="@+id/textView8"
                 android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/linearLayout"
                 android:layout_toEndOf="@+id/linearLayout"
+                android:layout_toRightOf="@+id/linearLayout"
+                android:text="o"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ffff30a3"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="n"
-                android:id="@+id/textView9"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ffff2134"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="l"
-                android:id="@+id/textView10"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ffffb335"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="i"
-                android:id="@+id/textView11"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#fffdff13"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="n"
-                android:id="@+id/textView12"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ff9fff23"
                 android:textSize="30dp" />
 
             <TextView
+                android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="e"
-                android:id="@+id/textView13"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#ff23ff19"
                 android:textSize="30dp" />
         </LinearLayout>
 
         <TextView
+            android:id="@+id/txtVRegist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/titleRegist"
-            android:id="@+id/txtVRegist"
-            android:textColor="#ffd624b0"
+            android:layout_margin="10dp"
             android:gravity="center_horizontal"
-            android:layout_margin="10dp" />
+            android:text="@string/titleRegist"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#ffd624b0" />
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:inputType="textEmailAddress"
-            android:ems="10"
             android:id="@+id/editText2"
-            android:background="@drawable/EditTextStyle"
-            android:text="Email"
-            android:textColor="#ffd624b0"
-            android:layout_margin="10dp"
-            android:height="20dp" />
-
-        <EditText
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:inputType="textVisiblePassword|text"
+            android:layout_margin="10dp"
+            android:height="20dp"
+            android:background="@drawable/edit_text_style"
             android:ems="10"
-            android:id="@+id/editText3"
-            android:layout_margin="10dp"
-            android:background="@drawable/EditTextStyle"
-            android:text="@string/pwd"
-            android:textColor="#ffd624b0"
-            android:height="20dp" />
+            android:inputType="textEmailAddress"
+            android:text="Email"
+            android:textColor="#ffd624b0" />
 
         <EditText
+            android:id="@+id/editText3"
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:layout_margin="10dp"
+            android:height="20dp"
+            android:background="@drawable/edit_text_style"
+            android:ems="10"
+            android:inputType="textVisiblePassword|text"
+            android:text="@string/pwd"
+            android:textColor="#ffd624b0" />
+
+        <EditText
+            android:id="@+id/editText4"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_margin="10dp"
+            android:height="20dp"
+            android:background="@drawable/edit_text_style"
+            android:ems="10"
             android:inputType="textPersonName"
             android:text="@string/nameUser"
-            android:ems="10"
-            android:id="@+id/editText4"
-            android:layout_margin="10dp"
-            android:background="@drawable/EditTextStyle"
-            android:textColor="#ffd624b0"
-            android:height="20dp" />
+            android:textColor="#ffd624b0" />
 
         <Button
+            android:id="@+id/btnRegister"
+            style="@style/btnStyleViolet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/dk"
-            android:id="@+id/btnRegister"
-            android:textColor="@android:color/white"
+            android:layout_margin="10dp"
             android:background="@drawable/custom_btn_violet"
-            style="@style/btnStyleViolet"
-            android:layout_margin="10dp" />
+            android:text="@string/dk"
+            android:textColor="@android:color/white" />
 
 
     </LinearLayout>
