--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -131,14 +131,14 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/editPass"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:background="@drawable/edit_text_style"
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="textVisiblePassword|text"
-                android:password="false"
+                android:password="true"
                 android:text="Mật khẩu"
                 android:textColor="#ffa813ff" />
         </LinearLayout>
