--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -149,7 +149,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/login"
                 style="@style/btnStyleViolet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -158,7 +158,7 @@
                 android:text="@string/btnSubmit" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/registry"
                 style="@style/btnStyleViolet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -167,7 +167,7 @@
                 android:text="@string/btnRes" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/exit"
                 style="@style/btnStyleViolet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
